--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="script.js"></script>
+  <script src="apikey.js"></script>
 </body>
 
 </html>
